--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     env:
       # Edit here with the names of your latex file and directory (can use ".")
       DIR: .
-      FILE: felknercv
+      FILE: felknerresume
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
@@ -38,10 +38,10 @@ jobs:
         env: 
           API_TOKEN_GITHUB: ${{ secrets.GH_PAT }}
         with:
-          source_file: 'github_artifacts/felknercv.pdf'
+          source_file: 'github_artifacts/felknerresume.pdf'
           destination_repo: 'katyfelkner/website'
-          destination_folder: '.'
+          destination_folder: ''
           destination_branch: 'master'
           user_email: 'felkner@usc.edu'
           user_name: 'katyfelkner'
-          commit_message: 'auto-updated CV'
+          commit_message: 'auto-updated resume'
